@@ -29,6 +29,14 @@
 
   }
 
+  $vids_pfcmd=PFCMD("class view all");
+
+  foreach($vids_pfcmd as $line){
+    $parts=preg_split("/\|/", $line);
+    $vids[]=array('vid' => $parts[0], 'desc' => $parts[1]);
+  }
+  array_shift($vids);
+
   $edit_info = new table("$current_top view $edit_item");
 
   print "<form name='edit' method='post' action='/$current_top/edit.php?item=$edit_item'>";
@@ -43,8 +51,17 @@
     if($key == 'status'){
       print "<tr><td></td><td>$pretty_key:</td><td>";
       printSelect( array('open' => 'Open', 'closed' => 'Closed'), 'hash', $val, "name='$key'");
-    }
-    else{
+    } elseif ($key == 'vid') {
+      print "<tr><td></td><td>$pretty_key:</td><td><select name='$key'>";
+      foreach($vids as $vid) {
+        print "      <option value='$vid[vid]'";
+        if ($vid[vid] == $val) {
+          print " selected";
+        }
+        print ">$vid[desc] ($vid[vid])</option>\n";
+      }
+      print "</select>";
+    } else {
       print "<tr><td></td><td>$pretty_key:</td><td><input type='text' name='$key' value='$val'>";
     }
 
